# statusfetch

./: CMakeLists.txt  README.md  program.c  run.sh
src/: CMakeLists.txt  linux.c  mingw-toolchain.cmake  os.h  program.c  run.ps1  windows.c
